[package]
name = "hedge_rs"
version = "0.1.14"
edition = "2024"
authors = ["flowerinthenight <root@flowerinthenight.com>"]
description = "A cluster membership library built on spindle-rs."
license = "MIT"
repository = "https://github.com/flowerinthenight/hedge-rs"
keywords = ["memberlist", "cluster", "spanner", "leader-election", "distributed-systems"]

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
google-cloud-spanner = { package="gcloud-spanner", version="1.0.0" }
exp_backoff = "0.1.4"
log = "0.4.26"
time = "0.3.40"
scopeguard = "1.2.0"
uuid = { version = "1.16.0", features = ["v4"] }
anyhow = "1.0.97"
crossbeam-channel = "0.5.14"
spindle_rs = "0.2.8"
num_cpus = "1.16.0"
base64ct = { version = "1.7.3", features = ["alloc"] }